provarAnt/00D1b0000000d5bEAA/objects/FulfillmentSnapshotPOA__c.object
<CustomObject>
    <description>Note: In software, the Project object is named SFDC_520_Quote.  This object will be a Detail to Fulfillment Snapshot Summary  in a Master-Detail relationship.</description>
    <fields>
        <fullName>Acct_Manager_Changed_on__c</fullName>
        <label>Acct Manager Changed on?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancellation_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancellation Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Budget_Amount__c</fullName>
        <label>Current Budget Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Decision_Maker__c</fullName>
        <label>Decision Maker</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Budget_Amount__c</fullName>
        <label>First Budget Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Snapshot_Summary__c</fullName>
        <label>Haystak QuickView</label>
        <referenceTo>FulfillmentSnapshotSummary__c</referenceTo>
        <relationshipLabel>Haystak Service</relationshipLabel>
        <relationshipName>Fulfillment_Snapshot_POA</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Haystak_Product_Type__c</fullName>
        <label>Haystak Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Retail SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search Essentials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLLC SEM PAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLLC SEM NON PAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLLC SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haystak Social</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_CO_OP_Processed__c</fullName>
        <label>Last CO-OP Processed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Solid_Engagement__c</fullName>
        <label>Last Solid Engagement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Scheduled_Follow_up_Date__c</fullName>
        <label>Next Scheduled Follow-up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parent_Opportunity_Id__c</fullName>
        <externalId>true</externalId>
        <label>Parent Opportunity Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Prior_Haystak_Acct_Manager__c</fullName>
        <label>Prior Haystak Acct Manager</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Status__c</fullName>
        <label>Product Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active and Happy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Risk in progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Risk in progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Risk in progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Rating</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Receives_CO_OP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receives CO-OP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending PM Assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onboarding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Intro Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Needs Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Week 1 Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Week 2 Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Week 3 Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Week 4 Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Week 5 Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Week 6 Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At Risk/Save</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Churned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failure to Launch</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ulfillmentSnapshotProductName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Haystak QuickView Product Name</label>
        <referenceTo>FulfillmentSnapshotProduct__c</referenceTo>
        <relationshipName>Fulfillment_Snapshot_POA</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Haystak QuickView POA</label>
    <nameField>
        <label>Haystak QuickView POA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Haystak QuickView POAs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>